--- a/snippets/toolbar.liquid
+++ b/snippets/toolbar.liquid
@@ -14,12 +14,20 @@
     <div class="max-3 desktop-3 tablet-3 mobile-1 min-1 text-right">
       <ul class="nav">
         <li class="cart">
-          <a href="/search" class="search ss-search ss-gizmo"></a> | 
-          <a href="/cart" id="CartToggle" class="ss-cart ss-gizmo">
-            <span class="icon-fallback-text"><span class="icon icon-cart" aria-hidden="true"></span></span>
-            <span id="CartCount">{{ cart.item_count }}</span>
-            {{ 'layout.cart.items_count' | t: count: cart.item_count }}
-          </a>
+          <div class="cart-wrapper">
+            <a href="#" id="CartToggle" class="ss-cart ss-gizmo">
+              <span class="icon-fallback-text"><span class="icon icon-cart" aria-hidden="true"></span></span>
+              <span class="cart-count">{{ cart.item_count }}</span>
+              <span>{{ 'layout.cart.items_count' | t: count: cart.item_count }}</span>
+              
+            </a>
+            <div class="cart-items-wrap" data-cart-view="data-cart-view">
+              <div class="cart-items" rv-each-item="cart.items">
+                {% include 'cart-contents' %}
+              </div>
+              <div class="wrapper"><a href="/cart" class="checkout cart-icon ss-gizmo ss-right right">Checkout</a>
+            </div>
+          </div>
         </li>
       </ul>
     </div>
